# IR

./: .gitignore
engine/: Cargo.toml
engine/src/: db.rs  engine.rs  index.rs  inverted_index.rs  main.rs
scraper/: .gitignore  main.py
scraper/bucket_queue/: __init__.py  queue.py
scraper/db/: __init__.py  mongo.py  save_bigrams.py  save_documents.py  save_words.py  url.py
scraper/scraper/: __init__.py  scraper.py
scraper/text_enrich/: __init__.py  enrich.py
scraper/utils/: __init__.py  arg_parser.py  settings.py
web/: app.py
web/db/: __init__.py  dictionary.py  get_bigrams.py  get_documents.py
web/request_enrich/: __init__.py  enrich.py
web/search_helper/: __init__.py  bigram_index.py  common.py  metrics.py
web/templates/: base.html  result.html  search.html
web/utils/: __init__.py  settings.py
