[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
futures = "0.3.25"
json = "0.12.4"
lazy_static = "1.4.0"
mongodb = "2.3.1"
ordered-float = "3.4.0"
serde = "1.0.149"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
use = "0.0.0"
